Backend: add AI-inspired semantic skill filtering